CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BUILD_TYPE Release)

PROJECT(icp)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )

FIND_PACKAGE(Sophus REQUIRED)
FIND_PACKAGE(Pangolin REQUIRED)
FIND_PACKAGE(G2O REQUIRED)
FIND_PACKAGE(CSparse REQUIRED)

#SET(G2O_LIBRARIES "g2o_core g2o_stuff g2o_types_sba g2o_csparse_extension")


MESSAGE(STATUS "1 Sophus DIRS: ${Sophus_INCLUDE_DIRS} \n
	LIBS: ${Sophus_LIBRARIES} \n
2 Pangolin DIRS: ${Pangolin_INCLUDE_DIRS} \n
	LIBS: ${Pangolin_LIBRARIES} \n
3 G2O DIRS: ${G2O_INCLUDE_DIRS} \n
	LIBS: ${G2O_LIBRARIES} \n
4 CSparse DIRS: ${CSPARSE_INCLUDE_DIR} \n
	LIBS: ${CSPARSE_LIBRARY}")

INCLUDE_DIRECTORIES("/usr/include/eigen3"
	${Sophus_INCLUDE_DIRS}
	${Pangolin_INCLUDE_DIRS}
	${G2O_INCLUDE_DIRS}
	${CSPARSE_INCLUDE_DIR})
	
ADD_EXECUTABLE(${PROJECT_NAME} icp.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	${Sophus_LIBRARIES}
	${Pangolin_LIBRARIES}
	g2o_core g2o_stuff g2o_types_sba g2o_csparse_extension
	${CSPARSE_LIBRARY})


