CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BUILD_TYPE Release)

PROJECT(e2RT)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

FIND_PACKAGE(Sophus REQUIRED)

INCLUDE_DIRECTORIES(${Sophus_INCLUDE_DIRS}
"/usr/include/eigen3")


ADD_EXECUTABLE(${PROJECT_NAME} E2Rt.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
${Sophus_LIBRARIES})
