CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BUILD_TYPE Release)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

PROJECT(pnp_ba)

FIND_PACKAGE(Sophus REQUIRED)

MESSAGE(STATUS "Sophus INCLUDE: ${Sophus_INCLUDE_DIRS} \n LIBS: ${Sophus_LIBRARIES}")

INCLUDE_DIRECTORIES("/usr/include/eigen3" ${Sophus_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} GN-BA.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Sophus_LIBRARIES})
