CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BUILD_TYPE Release)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

PROJECT(direct_method)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Pangolin REQUIRED)
FIND_PACKAGE(Sophus REQUIRED)

MESSAGE(STATUS "1 OpenCV DIRS: ${OpenCV_DIRS}\n LIBS: ${OpenCV_LIBS}\n
2 Boost DIRS: ${Boost_INCLUDE_DIRS} \n LIBS: ${Boost_LIBRARIES}\n
3 Pangolin DIRS: ${Pangolin_INCLUDE_DIRS} \n LIBS: ${Pangolin_LIBRARIES}\n
4 Sophus DIRS: ${Sophus_INCLUDE_DIRS} \n LIBS: ${Sophus_LIBRARIES}")

INCLUDE_DIRECTORIES("/usr/local/eigen3"
	${OpenCV_DIRS}
	${Boost_INCLUDE_DIRS}
	${Pangolin_INCLUDE_DIRS}
	${Sophus_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} direct_method.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	${OpenCV_LIBS}
	${Boost_LIBRARIES}
	${Pangolin_LIBRARIES}
	${Sophus_LIBRARIES})
