CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BUILD_TYPE Release)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

PROJECT(opticalFlowDisparity)

FIND_PACKAGE(OpenCV REQUIRED)

MESSAGE(STATUS "1 OpenCV DIRS: ${OpenCV_INCLUDE_DIRS} \n 
LIBS: ${OpenCV_LIBS}")

INCLUDE_DIRECTORIES("/usr/include/eigen3"
${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} optical_flow_disparity.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})


